// Vitest Snapshot v1

exports[`renders 1`] = `
<div
  className="sc-bcXHqe iogSyR"
>
  <h1>
    Foo
  </h1>
</div>
`;

exports[`renders a link with an ampersand 1`] = `
<div
  className="sc-bcXHqe iogSyR"
>
  <p>
    <a
      href="http://foo.com?foo=bar&baz=blah"
    />
  </p>
</div>
`;

exports[`renders a table 1`] = `
<div
  className="sc-bcXHqe iogSyR"
>
  <table>
    <thead>
      <tr>
        <th>
          foo
        </th>
        <th>
          bar
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          123
        </td>
        <td>
          456
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders an image 1`] = `
<div
  className="sc-bcXHqe iogSyR"
>
  <p>
    <img
      alt="foo"
      node={
        {
          "children": [],
          "position": {
            "end": {
              "column": 27,
              "line": 1,
              "offset": 26,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "properties": {
            "alt": "foo",
            "src": "http://bar/baz.png",
          },
          "tagName": "img",
          "type": "element",
        }
      }
      onClick={[Function]}
      src="http://bar/baz.png"
    />
  </p>
</div>
`;
